fix dark mode

--- a/src/scss/theme/dark/widget.scss
+++ b/src/scss/theme/dark/widget.scss
@@ -47,6 +47,17 @@
 			}
 		}
 	}
+
+	.spaceChat {
+		.buttons {
+			.item {
+				.icon.chat { background-image: url('#{$themePath}/icon/sidebar/chatSpace/chat.svg'); }
+				.icon.mute.on { background-image: url('#{$themePath}/icon/sidebar/chatSpace/pushOn.svg'); }
+				.icon.mute.off { background-image: url('#{$themePath}/icon/sidebar/chatSpace/pushOff.svg'); }
+				.icon.settings { background-image: url('#{$themePath}/icon/sidebar/chatSpace/settings.svg'); }
+			}
+		}
+	}
 }
 
 .widget.widgetTree {
